Instant Address Standard/main/default/objects/ServiceInput__c/ServiceInput__c.object-meta.xml
<CustomObject>
    <label>ServiceInput</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ServiceInputId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceInputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>