Instant Address Standard/main/default/objects/ServiceInput__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <label>Address1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>