Instant Address Standard/main/default/objects/ServiceInput__c/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <label>Address2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>