Instant Address Standard/main/default/objects/ServiceInput__c/fields/BatchIndex__c.field-meta.xml
<CustomField>
    <fullName>BatchIndex__c</fullName>
    <label>BatchIndex</label>
    <length>40</length>
    <type>Text</type>
</CustomField>