Instant Address Standard/main/default/objects/ServiceInput__c/fields/ClientRef1__c.field-meta.xml
<CustomField>
    <fullName>ClientRef1__c</fullName>
    <label>ClientRef1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>