Instant Address Standard/main/default/objects/ServiceInput__c/fields/ClientRef2__c.field-meta.xml
<CustomField>
    <fullName>ClientRef2__c</fullName>
    <label>ClientRef2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>