Instant Address Standard/main/default/objects/ServiceInput__c/fields/ClientRef3__c.field-meta.xml
<CustomField>
    <fullName>ClientRef3__c</fullName>
    <label>ClientRef3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>