Instant Address Standard/main/default/objects/ServiceInput__c/fields/Mappingid__c.field-meta.xml
<CustomField>
    <fullName>Mappingid__c</fullName>
    <label>Mappingid</label>
    <length>40</length>
    <type>Text</type>
</CustomField>