Instant Address Standard/main/default/objects/ServiceInput__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>ZipCode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>